--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -24,7 +24,7 @@
   
   paper-toolbar{
       border-bottom: 1px solid teal;--#cc6666;
-      height:70px;
+      height:8vh;
       color:teal;
   }
   
@@ -65,6 +65,9 @@
 
     paper-tabs {
       --paper-tabs-selection-bar-color:#c3403f;
+      --paper-tabs-container:{
+          height:80%;
+      }
     }
    
   </style>
