--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -13,7 +13,8 @@
             margin: 10px;
             width: 70px;
             height: 70px;
-            background-image: url("../icons/compare.png");
+            --background-image: url("../icons/compare.png");
+            background-size: cover;
         }
 
         #userid {
