--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -31,7 +31,7 @@
       };
       --paper-toolbar-background: white;--#f2fbf7;--#24293d;
       border-bottom: 1px solid teal;--#cc6666;
-      height:70px;
+      height:8vh;
       color:teal;
     }
 
